# prime-paper-wallet

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD-PARTY.md  app-config.toml
i18n/: en.json  es.json
src/: main.rs
theme/: theme.json
ui/: app.slint  callbacks.slint
wallet-core/: Cargo.toml  LICENSE-MIT
wallet-core/examples/: render_samples.rs
wallet-core/src/: address.rs  backup.rs  bill.rs  derive.rs  keys.rs  lib.rs  qr.rs  taproot.rs  template.rs  text.rs
wallet-core/tests/: bill.rs  template.rs  vectors.rs
