# UI-free bitcoin paper-wallet library — ALL crypto/QR/font/PNG logic lives
# here so it is host-testable (`cargo test -p wallet-core`), mirroring the
# pgp-core pattern in prime-pgp-keychain. Pure-Rust deps only: C code does
# not cross-compile to armv7a-unknown-xous-elf under the SDK toolchain.
[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "std"] }
sha2 = "0.10"
ripemd = "0.1"
hkdf = "0.12"
bs58 = "0.5"
bech32 = "0.11"
getrandom = "0.2"
# Same major as the SDK's slint-keyos-platform runtime, so one copy in-graph.
qrcode = { version = "0.12", default-features = false }
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hex = "0.4"
ripemd = "0.1"
rqrr = "0.10"
